full-moon/tests/cases/fail/parser/local-assignment-6/source.lua
local x =
local y = 2
